Fixed cutoff in Firefox when shown in the overflow menu + moved Chrome display fixes to before data loads

--- a/WebExtension/stylesheet.scss
+++ b/WebExtension/stylesheet.scss
@@ -10,6 +10,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+	width: 100vw;
 }
 %debuttoned {
 	border: none;
@@ -192,9 +193,6 @@ $folderIconSpace: 18px;
 	flex: none;
     background: hsl(281, 100%, 90%);
     border-top: 1px solid hsl(299, 100%, 25%);
-	.chrome & {
-		padding-bottom: 4px;
-	}
 }
 .optionsExpander {
 	width: 100%;
